--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -1,95 +1,89 @@
 .bottomComponent {
-    width: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+
+  .imageDiv {
+    width: 120px;
     height: 100%;
+    overflow: hidden;
+    position: relative;
+    overflow: hidden;
+    border-radius: 6px;
+
+    .hover {
+      position: absolute;
+      transition: 0.3s ease-in-out;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+      border-radius: 6px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 2;
+      display: none;
+
+      .playButton {
+        width: 24px;
+        height: 24px;
+      }
+    }
+
+    .image {
+      width: 100%;
+      height: auto;
+      transition: 0.3s ease-in-out;
+    }
+  }
+
+  .desDiv {
+    // width: 100px;
+    width: calc(100% - 136px);
+    overflow: hidden;
     display: flex;
-    flex-direction: row;
-    gap: 16px;
+    flex-direction: column;
+    gap: 10px;
 
-    .imageDiv {
-        width: 120px;
-        height: 100%;
-        overflow: hidden;
-        position: relative;
-        overflow: hidden;
-        border-radius: 6px;
-
-
-        .hover {
-            position: absolute;
-            transition: .3s ease-in-out;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-            border-radius: 6px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 2;
-            display: none;
-
-            .playButton {
-                width: 24px;
-                height: 24px;
-            }
-        }
-
-        .image {
-            width: 100%;
-            height: auto;
-            transition: .3s ease-in-out;
-            
-        }
-
+    .headingDiv {
+      width: 100%;
+      height: 44px;
+      font-family: "Ek Mukta";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 150%;
+      color: #333333;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
 
-    .desDiv {
-        // width: 100px;
-        width: calc(100% - 136px);
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        .headingDiv {
-            width: 100%;
-            height: 44px;
-            font-family: 'Ek Mukta';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 150%;
-            color: #333333;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-        }
-
-        .timeDiv {
-            font-family: 'Ek Mukta';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 13px;
-            @media only screen and (min-width: 1024px) {
-                font-size: 14px;
-              }
-            line-height: 150%;
-            color: #4F4F4F;
-        }
+    .timeDiv {
+      font-family: "Ek Mukta";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      @media only screen and (min-width: 1024px) {
+        font-size: 14px;
+      }
+      line-height: 150%;
+      color: #4f4f4f;
     }
+  }
 }
-
 
 .bottomComponent:hover .headingDiv {
-    text-decoration: underline;
-  }
-  
-  .bottomComponent:hover .image {
-    transform: scale(1.1);
-  }
-
-  
-.bottomComponent:hover .hover{
-    display: flex;
+  text-decoration: underline;
 }
 
+.bottomComponent:hover .image {
+  transform: scale(1.1);
+}
+
+.bottomComponent:hover .hover {
+  display: flex;
+}
