--- a/styles/components/_homeBlogTypeMain.scss
+++ b/styles/components/_homeBlogTypeMain.scss
@@ -7,16 +7,16 @@
   min-width: 250px;
   width: 100%;
   height: 250px;
-  background: linear-gradient(0.14deg,
-      rgba(17, 16, 16, 0.7) 12.94%,
-      rgba(0, 0, 0, 0) 67.86%);
+  background: linear-gradient(
+    0.14deg,
+    rgba(17, 16, 16, 0.7) 12.94%,
+    rgba(0, 0, 0, 0) 67.86%
+  );
   border-radius: 6px;
   align-self: stretch;
   margin: 0px;
   padding: 0px;
   position: relative;
-
-
 
   .thumbnail {
     display: flex;
@@ -26,9 +26,11 @@
     height: 100%;
     z-index: 1;
     position: absolute;
-    background: linear-gradient(0.14deg,
-        rgba(17, 16, 16, 0.7) 12.94%,
-        rgba(0, 0, 0, 0) 67.86%);
+    background: linear-gradient(
+      0.14deg,
+      rgba(17, 16, 16, 0.7) 12.94%,
+      rgba(0, 0, 0, 0) 67.86%
+    );
     overflow: hidden;
 
     .blogCardBackground {
@@ -37,25 +39,23 @@
       object-fit: cover;
       z-index: -1;
       transition-delay: 0.2s;
-      // transition-duration: 1s;
       transition: 0.3s ease-in-out;
-
     }
   }
 
-  // .thumbnail::after {
-  //   content: "";
-  //   position: absolute;
-  //   bottom: 0;
-  //   left: 0;
-  //   right: 0;
-  //   height: inherit;
-  //   background: linear-gradient(
-  //     0.14deg,
-  //     rgba(17, 16, 16, 0.7) 12.94%,
-  //     rgba(0, 0, 0, 0) 67.86%
-  //   );
-  // }
+  .thumbnail::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: inherit;
+    background: linear-gradient(
+      0.14deg,
+      rgba(17, 16, 16, 0.7) 12.94%,
+      rgba(0, 0, 0, 0) 67.86%
+    );
+  }
 
   .cardContent {
     display: flex;
@@ -64,7 +64,6 @@
     padding: 0px;
     gap: 8px;
     width: 100%;
-    // height: 106px;
     height: fit-content;
     flex: none;
     align-self: stretch;
@@ -163,10 +162,6 @@
   }
 }
 
-// .homeBlogTypeMain:hover .blogCardBackground {
-//   transform: scale(1.3);
-// }
-
 .homeBlogTypeMain:hover .blogTitle p {
   text-decoration: underline;
 }
@@ -175,20 +170,16 @@
   transform: scale(1.1);
 }
 
-
 @media only screen and (min-width: 710px) {
   .homeBlogTypeMain {
     height: 500px;
 
     .thumbnail {
-      .blogCardBackground {}
+      .blogCardBackground {
+      }
     }
 
     .cardContent {
-      .blogCategoryTag {
-        p {}
-      }
-
       .blogTitle {
         p {
           font-style: normal;
@@ -198,13 +189,10 @@
       }
 
       .blogBy {
-
         .author,
         .posted {
           font-size: 14px;
         }
-
-        .separator {}
       }
     }
   }
@@ -216,28 +204,17 @@
     height: 500px;
 
     .thumbnail {
-      .blogCardBackground {}
+      .blogCardBackground {
+      }
     }
 
     .cardContent {
-      .blogCategoryTag {
-        p {}
-      }
-
       .blogTitle {
         p {
           font-style: normal;
           font-weight: 700;
           font-size: 24px;
         }
-      }
-
-      .blogBy {
-
-        .author,
-        .posted {}
-
-        .separator {}
       }
     }
   }
