--- a/styles/components/_ourThoughts.scss
+++ b/styles/components/_ourThoughts.scss
@@ -5,7 +5,6 @@
   margin: 0px;
   padding: 0px;
   gap: 16px;
-  // width: 345px;
   width: 100%;
   height: 90px;
   transition: 0.4s all;
@@ -28,7 +27,7 @@
         width: unset;
         height: unset;
       }
-      transition: .3s ease-in-out;
+      transition: 0.3s ease-in-out;
     }
   }
   .blogContents {
