--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,8 +13,8 @@ a {
 
 * {
   box-sizing: border-box;
-  /* margin: 0;
-  padding: 0; */
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,8 +22,6 @@ a {
     color-scheme: dark;
   }
   body {
-    /* color: white; */
-    /* background: black; */
     color: black;
     background: #ffffff;
   }
