--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -160,7 +160,6 @@
     width: 490px;
     flex-direction: column;
     gap: 40px;
-    // padding-right: 72.5px;
 
     .relatedSection {
       width: 100%;
@@ -188,7 +187,7 @@
           font-size: 20px;
         }
         button {
-          font-size:16px
+          font-size: 16px;
         }
       }
       .featuredSectionContainer {
