--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -35,12 +35,12 @@
         height: 79px;
 
         .contacts {
-          font-family: 'Roboto';
+          font-family: "Roboto";
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
           line-height: 21px;
-          color: #FFFFFF;
+          color: #ffffff;
         }
       }
     }
@@ -55,14 +55,14 @@
       height: 70px;
 
       .appHeading {
-        font-family: 'Product Sans';
+        font-family: "Product Sans";
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
         line-height: 140%;
         display: flex;
         align-items: center;
-        color: #FFFFFF;
+        color: #ffffff;
         mix-blend-mode: normal;
       }
 
@@ -113,27 +113,27 @@
         .popularAreaHeading {
           width: 100%;
           height: 32px;
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 20px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
         .popularAreaContent {
           .popularAreaContentSpan {
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
             line-height: 140%;
             width: fit-content;
             word-spacing: 12px;
-            color: #E8E8E8;
+            color: #e8e8e8;
           }
         }
       }
@@ -150,14 +150,14 @@
         .gorupThreeChildHeading {
           width: 100%;
           height: 32px;
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 20px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
@@ -171,12 +171,12 @@
           height: 174px;
 
           .gorupThreeChildContentSpan {
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
             line-height: 140%;
-            color: #E8E8E8;
+            color: #e8e8e8;
           }
         }
       }
@@ -194,14 +194,14 @@
       .socialHeading {
         width: 100%;
         height: 32px;
-        font-family: 'Product Sans';
+        font-family: "Product Sans";
         font-style: normal;
         font-weight: 700;
         font-size: 20px;
         line-height: 140%;
         display: flex;
         align-items: center;
-        color: #FFFFFF;
+        color: #ffffff;
         mix-blend-mode: normal;
       }
 
@@ -225,21 +225,19 @@
             height: 16px;
             display: flex;
             align-items: center;
-            // background: #E8E8E8;
           }
 
           .socialName {
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
             line-height: 140%;
-            color: #E8E8E8;
+            color: #e8e8e8;
           }
         }
       }
     }
-
   }
 }
 
@@ -251,34 +249,34 @@
   gap: 8px;
   width: 100%;
   height: 339px;
-  background: #1E1E1E;
+  background: #1e1e1e;
 
   .disclaimerHeading {
-    font-family: 'Product Sans';
+    font-family: "Product Sans";
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 140%;
     display: flex;
     align-items: center;
-    color: #E8E8E8;
+    color: #e8e8e8;
     mix-blend-mode: normal;
   }
 
   .disclaimerContent {
-    font-family: 'Product Sans';
+    font-family: "Product Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 140%;
     display: flex;
     align-items: center;
-    color: #E8E8E8;
+    color: #e8e8e8;
     mix-blend-mode: normal;
   }
 }
 
-@media only screen and (min-width:710px) {
+@media only screen and (min-width: 710px) {
   .footerUpperDiv {
     display: flex;
     flex-direction: column;
@@ -316,12 +314,12 @@
           height: 79px;
 
           .contacts {
-            font-family: 'Roboto';
+            font-family: "Roboto";
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
             line-height: 21px;
-            color: #FFFFFF;
+            color: #ffffff;
           }
         }
       }
@@ -336,14 +334,14 @@
         height: 70px;
 
         .appHeading {
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 16px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
@@ -376,15 +374,12 @@
       display: flex;
       flex-direction: row;
       gap: 55px;
-      // border: solid 1px white;
 
       .gorupThree {
         width: auto;
         height: auto;
         display: flex;
         gap: 55px;
-        // border: solid 1px white;
-
 
         .popularArea {
           display: flex;
@@ -398,14 +393,14 @@
           .popularAreaHeading {
             width: 100%;
             height: 32px;
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 700;
             font-size: 20px;
             line-height: 140%;
             display: flex;
             align-items: center;
-            color: #FFFFFF;
+            color: #ffffff;
             mix-blend-mode: normal;
           }
 
@@ -419,14 +414,14 @@
             height: 174px;
 
             .popularAreaContentSpan {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 14px;
               line-height: 140%;
               width: fit-content;
               word-spacing: 12px;
-              color: #E8E8E8;
+              color: #e8e8e8;
             }
           }
         }
@@ -443,14 +438,14 @@
           .gorupThreeChildHeading {
             width: fit-content;
             height: 32px;
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 700;
             font-size: 20px;
             line-height: 140%;
             display: flex;
             align-items: center;
-            color: #FFFFFF;
+            color: #ffffff;
             mix-blend-mode: normal;
           }
 
@@ -464,12 +459,12 @@
             height: 174px;
 
             .gorupThreeChildContentSpan {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 16px;
               line-height: 140%;
-              color: #E8E8E8;
+              color: #e8e8e8;
             }
           }
         }
@@ -483,20 +478,18 @@
         gap: 24px;
         width: fit-content;
         height: 116px;
-        // border: solid 1px white;
-
 
         .socialHeading {
           width: 100%;
           height: 32px;
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 20px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
@@ -520,21 +513,19 @@
               height: 16px;
               display: flex;
               align-items: center;
-              // background: #E8E8E8;
             }
 
             .socialName {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 16px;
               line-height: 140%;
-              color: #E8E8E8;
+              color: #e8e8e8;
             }
           }
         }
       }
-
     }
   }
 
@@ -546,50 +537,48 @@
     gap: 8px;
     width: 100%;
     height: fit-content;
-    background: #1E1E1E;
+    background: #1e1e1e;
 
     .disclaimerHeading {
-      font-family: 'Product Sans';
+      font-family: "Product Sans";
       font-style: normal;
       font-weight: 700;
       font-size: 14px;
       line-height: 140%;
       display: flex;
       align-items: center;
-      color: #E8E8E8;
+      color: #e8e8e8;
       mix-blend-mode: normal;
     }
 
     .disclaimerContent {
-      font-family: 'Product Sans';
+      font-family: "Product Sans";
       font-style: normal;
       font-weight: 400;
       font-size: 12px;
       line-height: 140%;
       display: flex;
       align-items: center;
-      color: #E8E8E8;
+      color: #e8e8e8;
       mix-blend-mode: normal;
     }
   }
 }
 
-@media only screen and (min-width:1024px) {
+@media only screen and (min-width: 1024px) {
   .footerUpperDiv {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    // border: solid 1px white;
     gap: 32px;
     padding: 24px 5.5% 32px 5.5%;
     height: fit-content;
 
-    @media only screen and (min-width:1300px) {
+    @media only screen and (min-width: 1300px) {
       justify-content: flex-start;
       gap: 200px;
     }
-
 
     .firstDiv {
       display: flex;
@@ -622,12 +611,12 @@
           height: 79px;
 
           .contacts {
-            font-family: 'Roboto';
+            font-family: "Roboto";
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
             line-height: 21px;
-            color: #FFFFFF;
+            color: #ffffff;
           }
         }
       }
@@ -642,14 +631,14 @@
         height: fit-content;
 
         .appHeading {
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 16px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
@@ -662,11 +651,10 @@
           width: 100%;
           height: fit-content;
 
-          @media only screen and (min-width:1100px) {
+          @media only screen and (min-width: 1100px) {
             flex-direction: row;
             gap: 16px;
           }
-
 
           .icons {
             width: 124.4px;
@@ -684,22 +672,18 @@
 
     .categoryDiv {
       width: fit-content;
-      min-width: calc(847*100%/1440);
-      // width: 100%;
+      min-width: calc(847 * 100% / 1440);
       display: flex;
       flex-direction: row;
-      gap: calc(79.67*100%/847);
-      // border: solid 1px white;
+      gap: calc(79.67 * 100% / 847);
 
       .gorupThree {
         width: fit-content;
         justify-content: flex-end;
-        min-width: calc(615.33*100%/847);
+        min-width: calc(615.33 * 100% / 847);
         height: 100%;
         display: flex;
-        gap: calc(79.67*100%/615.33);
-        // border: solid 1px white;
-
+        gap: calc(79.67 * 100% / 615.33);
 
         .popularArea {
           display: flex;
@@ -709,22 +693,19 @@
           gap: 24px;
           width: fit-content;
           height: 230px;
-          // border: solid 1px white;
-
 
           .popularAreaHeading {
             width: 100%;
             height: 32px;
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 700;
             font-size: 20px;
             line-height: 140%;
             display: flex;
             align-items: center;
-            color: #FFFFFF;
+            color: #ffffff;
             mix-blend-mode: normal;
-            // border: solid 1px white;
           }
 
           .popularAreaContent {
@@ -737,16 +718,14 @@
             height: 174px;
 
             .popularAreaContentSpan {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 14px;
               line-height: 140%;
               width: fit-content;
               word-spacing: 12px;
-              color: #E8E8E8;
-              // border: solid 1px white;
-              // height: 20px;
+              color: #e8e8e8;
             }
           }
         }
@@ -759,20 +738,18 @@
           gap: 24px;
           width: fit-content;
           height: 230px;
-          // border: solid 1px white;
-
 
           .gorupThreeChildHeading {
             width: fit-content;
             height: 32px;
-            font-family: 'Product Sans';
+            font-family: "Product Sans";
             font-style: normal;
             font-weight: 700;
             font-size: 20px;
             line-height: 140%;
             display: flex;
             align-items: center;
-            color: #FFFFFF;
+            color: #ffffff;
             mix-blend-mode: normal;
           }
 
@@ -786,12 +763,12 @@
             height: 174px;
 
             .gorupThreeChildContentSpan {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 16px;
               line-height: 140%;
-              color: #E8E8E8;
+              color: #e8e8e8;
               width: max-content;
             }
           }
@@ -806,20 +783,18 @@
         gap: 24px;
         width: fit-content;
         height: 116px;
-        // border: solid 1px white;
-
 
         .socialHeading {
           width: 100%;
           height: 32px;
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 700;
           font-size: 20px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #FFFFFF;
+          color: #ffffff;
           mix-blend-mode: normal;
         }
 
@@ -843,21 +818,19 @@
               height: 16px;
               display: flex;
               align-items: center;
-              // background: #E8E8E8;
             }
 
             .socialName {
-              font-family: 'Product Sans';
+              font-family: "Product Sans";
               font-style: normal;
               font-weight: 400;
               font-size: 16px;
               line-height: 140%;
-              color: #E8E8E8;
+              color: #e8e8e8;
             }
           }
         }
       }
-
     }
   }
 
@@ -869,164 +842,30 @@
     gap: 8px;
     width: 100%;
     height: fit-content;
-    background: #1E1E1E;
+    background: #1e1e1e;
 
     .disclaimerHeading {
-      font-family: 'Product Sans';
+      font-family: "Product Sans";
       font-style: normal;
       font-weight: 700;
       font-size: 14px;
       line-height: 140%;
       display: flex;
       align-items: center;
-      color: #E8E8E8;
+      color: #e8e8e8;
       mix-blend-mode: normal;
     }
 
     .disclaimerContent {
-      font-family: 'Product Sans';
+      font-family: "Product Sans";
       font-style: normal;
       font-weight: 400;
       font-size: 10px;
       line-height: 140%;
       display: flex;
       align-items: center;
-      color: #E8E8E8;
+      color: #e8e8e8;
       mix-blend-mode: normal;
     }
   }
 }
-
-
-
-
-
-// .footerMainContainer {
-//   width: 100%;
-//   height: fit-content;
-//   margin: 0px;
-//   padding: 24px 23.3px 32px 23.3px;
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   // background-color: red;
-
-//   .footerBodyContainer {
-//     width: 100%;
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     justify-content: space-between;
-//     align-items: flex-start;
-//     margin: 0px;
-//     padding: 0px;
-//     row-gap: 24px;
-//     column-gap: 90px;
-//     // background-color: gold;
-
-//     .footerLogoSection {
-//       min-width: 232.32px;
-//       // width: 100%;
-//       max-width: 328px;
-//       height: fit-content;
-//       display: flex;
-//       flex-direction: column;
-//       align-items: flex-start;
-//       margin: 0;
-//       padding: 0;
-//       // background-color: aqua;
-//     }
-
-//     .footerRightSection {
-//       display: flex;
-//       flex-direction: row;
-//       flex-wrap: wrap;
-//       justify-content: space-between;
-//       align-items: flex-start;
-//       gap: 20px;
-//       margin: 0;
-//       padding: 0;
-//       min-width: fit-content;
-//       max-width: 847px;
-//       height: fit-content;
-//       // background-color: black;
-
-//       .footerRightOne {
-//         display: flex;
-//         flex-direction: row;
-//         flex-wrap: wrap;
-//         justify-content: space-between;
-//         align-items: flex-start;
-//         min-width: 328px;
-//         gap: 24px;
-//         // display: none;
-//         // background-color: green;
-
-//         .footerSection {
-//           display: flex;
-//           flex-direction: column;
-//           align-items: flex-start;
-//           padding: 0px;
-//           margin: 0px;
-//           gap: 24px;
-
-//           h5 {
-//             font-family: "Product Sans", sans-serif;
-//             font-style: normal;
-//             font-weight: 700;
-//             font-size: 16px;
-//             line-height: 140%;
-//             display: flex;
-//             align-items: center;
-//             color: #ffffff;
-//             mix-blend-mode: normal;
-//           }
-
-//           ul {
-//             display: flex;
-//             flex-direction: column;
-//             align-items: flex-start;
-//             padding: 0px;
-//             gap: 12px;
-
-//             li {
-//               display: flex;
-//               flex-direction: row;
-//               justify-content: center;
-//               align-items: center;
-//               margin: 0px;
-//               padding: 0px;
-
-//               .customLinks {
-//                 font-family: "Product Sans", sans-serif;
-//                 font-style: normal;
-//                 font-weight: 400;
-//                 font-size: 14px;
-//                 line-height: 140%;
-//                 color: #e8e8e8;
-//               }
-
-//               hr {
-//                 width: 14px;
-//                 height: 0px;
-//                 border: 1px solid #ffffff;
-//                 transform: rotate(90deg);
-//               }
-//             }
-//           }
-//         }
-//       }
-//       .footerRightTwo {
-//         display: flex;
-//         flex-direction: row;
-//         flex-wrap: wrap;
-//         justify-content: space-between;
-//         align-items: flex-start;
-//         min-width: 328px;
-//         gap: 24px;
-//         // display: none;
-//         // background-color: purple;
-//       }
-//     }
-//   }
-// }
