--- a/styles/pages/_cate_slug.scss
+++ b/styles/pages/_cate_slug.scss
@@ -331,23 +331,37 @@
         height: 300px;
 
         .errorMessageSection {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-wrap: wrap;
-          height: 150px;
           background-color: #001338;
           padding: 0 20px;
           border-radius: 20px;
-          .errorMessage {
-            margin: 0;
-            padding: 0;
-            color: #ffffff;
-            font-family: "Product Sans";
-            font-style: normal;
-            font-weight: 400;
-            font-size: 30px;
-            line-height: 140%;
+          padding: 10px 20px;
+          .errorMessageSectionTop {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            height: fit-content;
+            .errorMessage {
+              margin: 0;
+              padding: 0;
+              color: #ffffff;
+              font-family: "Product Sans";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 30px;
+              line-height: 140%;
+            }
+          }
+          .errorMessageSectionBottom {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .errorLink {
+              .errorRouteButton {
+                width: fit-content;
+                min-width: 100px;
+              }
+            }
           }
         }
       }
