--- a/styles/pages/_cate_slug.scss
+++ b/styles/pages/_cate_slug.scss
@@ -345,7 +345,7 @@
               margin: 0;
               padding: 0;
               color: #ffffff;
-              font-family: "Product Sans";
+              font-family: "EkMukta";
               font-style: normal;
               font-weight: 400;
               font-size: 30px;
@@ -356,10 +356,29 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            .errorInfo {
+              margin: 0;
+              padding: 0px 10px;
+              color: #ffffff;
+            }
             .errorLink {
               .errorRouteButton {
                 width: fit-content;
-                min-width: 100px;
+                min-width: 50px;
+                background-color: #ffffff;
+                color: blue;
+                transition: 0.3s ease-in-out;
+                font-family: "EkMukta";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 140%;
+                outline: none;
+
+                &:hover {
+                  background-color: #1bb35d;
+                  color: #ffffff;
+                }
               }
             }
           }
